[gd_scene load_steps=11 format=3 uid="uid://dgnyxlxv2ap2w"]

[ext_resource type="Theme" uid="uid://dkrs350vaq2kh" path="res://addons/RPGMap/Assets/Themes/dialog_theme.tres" id="1_e3g48"]
[ext_resource type="Script" uid="uid://d02oxtrli3ubh" path="res://addons/CustomControls/Dialogs/CommandEvents/jump_to_label_dialog.gd" id="2_xgmse"]
[ext_resource type="PackedScene" uid="uid://1uibymv4bb3j" path="res://addons/CustomControls/custom_line_edit.tscn" id="3_ukgym"]
[ext_resource type="Texture2D" uid="uid://btjtps7r83y2t" path="res://addons/CustomControls/Images/buttons.png" id="4_plrrm"]
[ext_resource type="PackedScene" uid="uid://bnx7omk3joxly" path="res://addons/CustomControls/custom_button.tscn" id="6_at4vy"]

[sub_resource type="Gradient" id="Gradient_7ascj"]
colors = PackedColorArray(0.184314, 0.2, 0.207843, 1, 0.278431, 0.294118, 0.301961, 1)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_ourej"]
gradient = SubResource("Gradient_7ascj")
fill_from = Vector2(0.5, 1)
fill_to = Vector2(0.5, 0)

[sub_resource type="AtlasTexture" id="AtlasTexture_h1jni"]
atlas = ExtResource("4_plrrm")
region = Rect2(72, 0, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_4t3ft"]
atlas = ExtResource("4_plrrm")
region = Rect2(72, 24, 24, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_qeqme"]
atlas = ExtResource("4_plrrm")
region = Rect2(72, 0, 24, 24)

[node name="JumpToLabelDialog" type="Window"]
title = "Jump To Label"
position = Vector2i(0, 36)
size = Vector2i(400, 95)
transient = true
exclusive = true
unresizable = true
theme = ExtResource("1_e3g48")
script = ExtResource("2_xgmse")

[node name="Background" type="TextureRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("GradientTexture2D_ourej")

[node name="MarginContainer" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 12
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 12

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Filename" parent="MarginContainer/VBoxContainer/HBoxContainer" instance=ExtResource("3_ukgym")]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3

[node name="ExpandList" type="TextureButton" parent="MarginContainer/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 4
tooltip_text = "[title]Select Label[/title]
Select one of the tags added to this event"
focus_mode = 0
mouse_default_cursor_shape = 2
texture_normal = SubResource("AtlasTexture_h1jni")
texture_hover = SubResource("AtlasTexture_4t3ft")
texture_disabled = SubResource("AtlasTexture_qeqme")

[node name="HSeparator" type="HSeparator" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 10

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 10
alignment = 1

[node name="OKButton" parent="MarginContainer/VBoxContainer/HBoxContainer2" instance=ExtResource("6_at4vy")]
unique_name_in_owner = true
custom_minimum_size = Vector2(160, 0)
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "[title]Ok[/title]
Saves all changes and closes the windows."
text = "OK"

[node name="CancelButton" parent="MarginContainer/VBoxContainer/HBoxContainer2" instance=ExtResource("6_at4vy")]
unique_name_in_owner = true
custom_minimum_size = Vector2(160, 0)
layout_mode = 2
size_flags_horizontal = 3
tooltip_text = "[title]Cancel[/title]
Closes this window without saving any changes."
text = "CANCEL"

[node name="FileSelector" type="PopupMenu" parent="."]
unique_name_in_owner = true
size = Vector2i(28, 8)

[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/ExpandList" to="." method="_on_expand_list_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer2/OKButton" to="." method="_on_ok_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer2/CancelButton" to="." method="_on_cancel_button_pressed"]
[connection signal="index_pressed" from="FileSelector" to="." method="_on_file_selector_index_pressed"]
[connection signal="popup_hide" from="FileSelector" to="." method="_on_file_selector_popup_hide"]
